--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^5.0.0
   json_annotation: ^4.3.0
   timezone: ^0.9.4
+  flutter_background_service: ^5.1.0
   url_launcher: ^6.0.10
   google_fonts: ^4.0.4
   package_info_plus: ^8.3.0
