--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   hive_flutter: ^1.1.0
   mongo_dart: ^0.10.8
   flutter_local_notifications: ^18.0.1
+  syncfusion_flutter_charts: ^31.1.19
   
 
 dependency_overrides:
